--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,71 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Craiglist Clone</title>
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <h1>Testing to see if this works!</h1>
+    <nav>
+        <div class="container nav-wrapper">
+            <a href="/" class="brand-logo">Craiglist Clone</a>
+            <ul id="nav-mobile" class="right">
+                <li><a href="/">Home</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h1 style="text-align: center">What do you want to search for on Craiglist Clone?</h1>
+        <div class="row">
+            <div class="col s4">
+                <!-- Promo content 1 goes here -->
+                <div class="center">
+                    <i class="large material-icons" style="color: #EE6E73">flash_on</i>
+                    <p>Fast Craiglist web scraper</p>
+                    <p class="light center">Scrape away right here with a beautiful GUI</p>
+                </div>
+            </div>
+            <div class="col s4">
+                <!-- Promo content 2 goes here -->
+                <div class="center">
+                    <i class="large material-icons" style="color: #EE6E73">camera</i>
+                    <p>Filter your searches</p>
+                    <p class="light center">We built a functionality to filter based on pricing</p>
+                </div>
+            </div>
+            <div class="col s4">
+                <!-- Promo content 3 goes here -->
+                <div class="center">
+                    <i class="large material-icons" style="color: #EE6E73">chrome_reader_mode</i>
+                    <p>A much sexier frontend to Craiglist</p>
+                    <p class="light center">We built this with ❤</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <form action="{% url 'new_search' %}" method="post">
+            {% csrf_token %}
+            <input type="text" name="search" placeholder="Your search">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+            </button>
+        </form>
+    </div>
+
+    <div class="container">
+        {% block content %}
+
+        {% endblock content %}
+    </div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
