--- a/templates/my_app/new_search.html
+++ b/templates/my_app/new_search.html
@@ -4,44 +4,20 @@
     <h2 style="text-align: center">{{ search | title }}</h2>
 
     <div class="row">
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://i.ytimg.com/vi/AZ2ZPmEfjvU/maxresdefault.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>Test</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
-                </div>
-            </div>
-        </div>
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://i.ytimg.com/vi/AZ2ZPmEfjvU/maxresdefault.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>Test</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
+        {% for post in final_postings %}
+            <div class="col s4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="{{ post.1 }}" target="_blank" rel="noopener noreferrer"><img src="{{ post.3 }}" alt="{{ post.0 }}"></a>
+                    </div>
+                    <div class="card-content">
+                        <p>{{ post.0 }}</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="{{ post.1 }}" target="_blank" rel="noopener noreferrer">View listing: {{ post.2 }}</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col s4">
-            <div class="card">
-                <div class="card-image">
-                    <a href="/"><img src="https://i.ytimg.com/vi/AZ2ZPmEfjvU/maxresdefault.jpg" alt=""></a>
-                </div>
-                <div class="card-content">
-                    <p>Test</p>
-                </div>
-                <div class="card-action">
-                    <a href="/">View listing: Price </a>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 {% endblock content %}
